--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.32.1",
+    "allure-playwright": "^2.1.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.7"
   },
