Added allure report

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,6 +24,8 @@ jobs:
         run: npx playwright install --with-deps chromium
       - name: Run Playwright tests
         run: npm run test:dev
+      - name: Generate allure report
+        run: allure generate my-allure-results -o allure-report --clean
       - uses: actions/upload-artifact@v3
         if: always()
         with:
